JBPM-5071 - remove of jbpm runtime from workbench